--- a/app.json
+++ b/app.json
@@ -1,5 +1,7 @@
 {
   "pages":[
+    "pages/demo14/demo14",
+    "pages/demo13/demo13",
     "pages/demo12/demo12",
     "pages/demo11/demo11",
     "pages/demo10/demo10",
