--- a/app.json
+++ b/app.json
@@ -1,5 +1,7 @@
 {
   "pages":[
+    "pages/demo16/demo16",
+    "pages/demo15/demo15",
     "pages/demo14/demo14",
     "pages/demo13/demo13",
     "pages/demo12/demo12",
